fix nickname in cursor reticle being able to wrap onto multiple lines

--- a/static/index.css
+++ b/static/index.css
@@ -114,6 +114,7 @@ rkgk-reticle-cursor {
             position: absolute;
             top: 20px;
             left: 8px;
+            width: max-content;
 
             color: white;
             background-color: var(--color);
